src/test/ui/closures/2229_closure_analysis/capture-disjoint-field-tuple.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-disjoint-field-tuple.rs:12:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-disjoint-field-tuple.rs:3:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/capture-disjoint-field-tuple.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", t.0);
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0)] -> ImmBorrow
  --> $DIR/capture-disjoint-field-tuple.rs:18:24
   |
LL |         println!("{}", t.0);
   |                        ^^^

error: Min Capture analysis includes:
  --> $DIR/capture-disjoint-field-tuple.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", t.0);
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ImmBorrow
  --> $DIR/capture-disjoint-field-tuple.rs:18:24
   |
LL |         println!("{}", t.0);
   |                        ^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
